add scroll in JS

--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
     <header class="nav">
         <header class="container">
             <nav class="nav_main">
-                <div class="about_nav">
-                    <p><a href="#b1">Lilando</a></p>
+                <div class="about_nav scroll">
+                    <p>Lilando</p>
                 </div>
-                <div class="price_nav">
-                    <p><a href="#b2">Cennik</a></p>
+                <div class="price_nav scroll">
+                    <p>Cennik</p>
                 </div>
                 <div class="lilando_nav">
 
                 </div>
-                <div class="gallery_nav">
-                    <p><a href="#b3">Gallery</a></p>
+                <div class="gallery_nav scroll">
+                    <p>Gallery</p>
                 </div>
-                <div class="contact_nav">
-                    <p><a href="#b4">Kontakt</a></p>
+                <div class="contact_nav scroll">
+                    <p>Kontakt</p>
                 </div>
             </nav>
         </header>
@@ -44,16 +44,16 @@
         <nav class="main">
             <div class="dropdown_list_main">
                 <ul class="dropdown">
-                    <li><a class="dropdown_list" href="#b1">Lilando</a></li>
-                    <li><a class="dropdown_list" href="#b2">Cennik</a></li>
-                    <li><a class="dropdown_list" href="#b3">Galeria</a></li> 
-                    <li><a class="dropdown_list" href="#b4">Kontakt</a></li>
+                    <li><a class="dropdown_list scroll_dropdown">Lilando</a></li>
+                    <li><a class="dropdown_list scroll_dropdown">Cennik</a></li>
+                    <li><a class="dropdown_list scroll_dropdown">Galeria</a></li> 
+                    <li><a class="dropdown_list scroll_dropdown">Kontakt</a></li>
                 </ul>            
             </div>
         </nav>        
     </header>
     <header class="about">
-        <section class="about_main container" id="b1">
+        <section class="about_main container scroll_section" >
             <h1 class="main_description">Lilando! Twój salon kosmetyczny w Piasecznie</h1> <br>
             <h3 class="description_first">Jesteś zmęczona po całym dniu pracy? Pragniesz chwili relaksu, odprężenia przy
                 spokojnej muzyce i dobrej kawie? <br>
@@ -81,7 +81,7 @@
         
     </header>
     <main class="price">
-        <header class="price_main " id="b2">
+        <header class="price_main scroll_section">
             <div class="price_hand">
                 <p>Dłonie</p>
             </div>
@@ -139,7 +139,7 @@
             </article>
         </header>
     </main>
-    <section class="gallery" id="b3">
+    <section class="gallery scroll_section">
         <section class="slider_background">
             <section class="slider row">
                 <div class="slider_main_picture">
@@ -235,7 +235,7 @@
             </section>
         </section>
     </section>
-    <section class="contact" id="b4">
+    <section class="contact scroll_section">
         <section class="contact_main container">
             <section class="contact_info_main ">
                 <div class="contact_info">
