add scroll up button in js

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             </section>           
         </section>
     </section>
-    <a href="#" id="scroll-top">UP</a>
+    <a href="#" class="scroll-top">UP</a>
     <footer class="footer">
         <div class="footer_box1">
             <div class="footer_copyright">
