change price function and some style in price_main

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="price_hand">
                 <p>Dłonie</p>
             </div>
-            <section class="price_hand_main">
+            <section class="price_hand_main" style="display:none">
                 <div class="price_hand_display container">
                         <table >
                                 <tr ><td>Manicure hybrydowy</td><td>70 zł</td></tr>
@@ -95,7 +95,7 @@
                                 <tr><td>Manicure z masłem shea</td><td>50 zł</td></tr>
                                 <tr><td>Manicure japoński</td><td>60 zł</td></tr>
                                 <tr><td>Przedłużanie jednego paznokcia</td><td>10 zł</td></tr>
-                                <tr><td>Zdobienia od</td><td>5 zł</td></tr>
+                                <tr><td>Zdobienia od</td><td>10 zł</td></tr>
                                 <tr><td>Parafina na ręce</td><td>30 zł</td></tr>
                         </table>                    
                 </div>
@@ -104,7 +104,7 @@
             <div class="price_feet">
                 <p>Stopy</p>
             </div>
-            <section class="price_feet_main">
+            <section class="price_feet_main" style="display:none">
                 <div class="price_feet_display container">
                         <table >
                                 <tr><td>Manicure hybrydowy</td><td>70 zł</td></tr>
@@ -114,7 +114,7 @@
                                 <tr><td>Manicure z masłem shea</td><td>50 zł</td></tr>
                                 <tr><td>Manicure japoński</td><td>60 zł</td></tr>
                                 <tr><td>Przedłużanie jednego paznokcia</td><td>10 zł</td></tr>
-                                <tr><td>Zdobienia od</td><td>5 zł</td></tr>
+                                <tr><td>Zdobienia od</td><td>10 zł</td></tr>
                                 <tr><td>Parafina na ręce</td><td>30 zł</td></tr>
                         </table> 
                 </div>
@@ -122,7 +122,7 @@
             <div class="price_cosmetics">
                 <p>Podologia</p>
             </div>
-            <article class="price_cosmetics_main">
+            <article class="price_cosmetics_main"  style="display:none">
                 <div class="price_cosmetics_display container">
                         <table >
                                 <tr><td>Manicure hybrydowy</td><td>70 zł</td></tr>
@@ -132,7 +132,7 @@
                                 <tr><td>Manicure z masłem shea</td><td>50 zł</td></tr>
                                 <tr><td>Manicure japoński</td><td>60 zł</td></tr>
                                 <tr><td>Przedłużanie jednego paznokcia</td><td>10 zł</td></tr>
-                                <tr><td>Zdobienia od</td><td>5 zł</td></tr>
+                                <tr><td>Zdobienia od</td><td>10 zł</td></tr>
                                 <tr><td>Parafina na ręce</td><td>30 zł</td></tr>
                         </table> 
                 </div>
